Atualizar o index.html

--- a/www.fmb.com.br/index.html
+++ b/www.fmb.com.br/index.html
@@ -24,7 +24,7 @@
     </nav>
     <main>
         <h2>Bem-vindo ao FBMM</h2>
-        <p>Conteúdo da página inicial.</p>
+        <p>Aqui nos produzimos Hardwares e Softwares, para voce e por voce. Vamos cleiton mata ela</p>
     </main>
 </body>
 </html>
